tests/sksl/errors/ReservedNameHvec3.glsl
### Compilation failed:

error: 1: name 'hvec3' is reserved
int hvec3;
    ^^^^^
1 error
